--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import '@mescius/spread-sheets/styles/gc.spread.sheets.excel2016colorful';
+
 @layer base {
   :root {
     --background: #ffffff;
